Change initial and maximum scale in index.html to prevent automatic zooming in when loading on mobile devices

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body > main {
 }
 
 main > h1 {
-    font-size: 3em;    
+    font-size: 3em;        
 }
 
 main > div {
@@ -34,7 +34,7 @@ main > div {
 }
 
 body > main > div > #image-container {    
-    border: 2px solid #2a2a2a;
+    border: 0.4em solid #2a2a2a;
     width: 55%;
     aspect-ratio: 1/1;
     padding: 1em;
@@ -49,8 +49,8 @@ body > main > div > #image-container {
 }
 
 div > #image-container.large {
-    width: 35em;
-    height: 35em;
+    width: 100%;
+    height: 100%;
 }
 
 #image-container > #image-overlay {
@@ -158,12 +158,12 @@ main > #button-colour-section > #focus-container {
     display: block;
 }
 
-@media only screen and (max-width: 610px) {
+@media only screen and (max-device-width: 610px) {
     main > h1 {
         text-align: center;                
-        font-size: 2.5em;          
+        font-size: 10em;          
         width: 100%;            
-        height: fit-content;
+        height: fit-content;        
     }
 
     main > div {
@@ -173,10 +173,11 @@ main > #button-colour-section > #focus-container {
 
     div > #image-container {
         align-self: center;
+        /* border: 10px solid #2a2a2a; */
     }
 
     div > #image-container.large {        
-        width: 50%;        
+        width: 70%;        
         aspect-ratio: 1 / 1;
     }
 
